syntax = "proto3";

package service.v1;

import "entity/v1/answer.proto";
import "entity/v1/prompt.proto";

service Local {
  rpc GetReply(LocalGetReplyRequest) returns (LocalGetReplyResponse) {}
}

message LocalGetReplyRequest {
  entity.v1.Prompt prompt = 1;
}

message LocalGetReplyResponse {
  entity.v1.Answer answer = 1;
}
